# ltui

./: .dprint.jsonc  .gitignore  .goreleaser.yml  .pre-commit-config.yaml  CITATION.cff  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  licenserc.toml
.github/: dependabot.yml  release.yml  settings.yml
.github/workflows/: build.yml  dependency-review.yml  ossf.yml  release.yml
src/: main.rs
src/app/: mod.rs
src/cli/: mod.rs
src/client/: linear.rs  mod.rs  types.rs
src/config/: mod.rs
src/ui/: app.rs  events.rs  mod.rs
src/ui/components/: help.rs  issues.rs  mod.rs  projects.rs  teams.rs
src/utils/: formatters.rs  mod.rs
